@@ -29,52 +29,52 @@ no_index:
 provides:
   File::DataClass:
     file: lib/File/DataClass.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::Cache:
     file: lib/File/DataClass/Cache.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::Constants:
     file: lib/File/DataClass/Constants.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::Exception:
     file: lib/File/DataClass/Exception.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::Functions:
     file: lib/File/DataClass/Functions.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::HashMerge:
     file: lib/File/DataClass/HashMerge.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::IO:
     file: lib/File/DataClass/IO.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::List:
     file: lib/File/DataClass/List.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::Result:
     file: lib/File/DataClass/Result.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::ResultSet:
     file: lib/File/DataClass/ResultSet.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::ResultSource:
     file: lib/File/DataClass/ResultSource.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::Schema:
     file: lib/File/DataClass/Schema.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::Storage:
     file: lib/File/DataClass/Storage.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::Storage::Any:
     file: lib/File/DataClass/Storage/Any.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::Storage::JSON:
     file: lib/File/DataClass/Storage/JSON.pm
-    version: v0.50.2
+    version: v0.50.3
   File::DataClass::Types:
     file: lib/File/DataClass/Types.pm
-    version: v0.50.2
+    version: v0.50.3
 requires:
   Cache::FastMmap: '1.40'
   Class::Method::ModifiersX::Augment: '0.001'
@@ -98,4 +98,4 @@ resources:
   homepage: https://metacpan.org/author/PJFL
   license: http://dev.perl.org/licenses/
   repository: git://github.com/pjfl/p5-file-dataclass.git
-version: 0.50.2
+version: 0.50.3
