@@ -4,7 +4,7 @@ Name
 
 Version
 
-    This document describes version v0.50.$Rev: 2 $ of File::DataClass
+    This document describes version v0.50.$Rev: 3 $ of File::DataClass
 
 Synopsis
 
