@@ -15,19 +15,19 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 5533a7e1206f9f79fe18a1d363b414a138aea6ab Build.PL
-SHA1 fce3c8612453703358468ebd9223dbc6bca3f48a Changes
+SHA1 5bb97ab470ebd0ab4c8de5929cc20148410937bf Changes
 SHA1 b8415dc6fd6293b168bcc15a552f4383175e2f2f LICENSE
 SHA1 de3a5e1b4d1a08fb4b4769f99a5ffab5b8c3aa0a MANIFEST
-SHA1 66e763645c9d22068cff5e21cf40df13292f6599 META.json
-SHA1 42d5fe1e699badbc831577b79a5cf89e9b29f587 META.yml
-SHA1 9bbe4e1bc5e75c962f048b3ce03b41da5e5d7a43 README
-SHA1 3dbe4aa3b81ccf7fb06f68af748bcc5e76be9da9 lib/File/DataClass.pm
+SHA1 edbe54ea372c71e040b8023ac766d00e680d38db META.json
+SHA1 975d5cb9a9e1f67b1676dffef87f9d7c9a4640dd META.yml
+SHA1 94ab0c088819d9ee98f52fbfcbbeaa321948795a README
+SHA1 5941e69ecc7b0a86c633e55cfee46d577ee99f2a lib/File/DataClass.pm
 SHA1 6b872e1b2209305dada0626c1738a16a340cad8e lib/File/DataClass/Cache.pm
 SHA1 08aefca2637e3d6f9cf82e4397858fd5410efeaf lib/File/DataClass/Constants.pm
 SHA1 7018f6a179cf4d91103795b8d2f07a3b6bcd706a lib/File/DataClass/Exception.pm
 SHA1 ca2d0d20084efb5bfef0e141673f6fb8f38fbc0e lib/File/DataClass/Functions.pm
 SHA1 b5c411a107bcac70809e91af04bb9668aaf03c32 lib/File/DataClass/HashMerge.pm
-SHA1 083329d10f8e65f6cc29d4724a5b20b082684aa5 lib/File/DataClass/IO.pm
+SHA1 022f2b7ca8eefb00fa3fadbcd73c44050f728b9a lib/File/DataClass/IO.pm
 SHA1 eaaaab5a1e4de5a5014342eca11c5ae8762ad54c lib/File/DataClass/List.pm
 SHA1 1da189e45b58b7cbb7d295295f17a089b9db3e50 lib/File/DataClass/Result.pm
 SHA1 7b6229cd53894b5fd88bef0498726f00400bfb33 lib/File/DataClass/ResultSet.pm
@@ -48,7 +48,7 @@ SHA1 d9a61bd22beea16d6236e1d08c249f87dafad358 t/12types.t
 SHA1 2cab3fa26a136c8ba0058ee2c483143193068608 t/13functions.t
 SHA1 674677fa14293d09c5b4ec59c9f3bf6392b78d83 t/15io.t
 SHA1 34350d79913442c22e993f32bb8bd883470f99bd t/17constraints.t
-SHA1 8d2f4a77c2969b9a7cd3b09dd5a01e40093453a5 t/20data-class.t
+SHA1 6bf4f5d493dd59dcac83dbe9dc4b003b619971c0 t/20data-class.t
 SHA1 334173dac114f4726d40a213165030481db481eb t/21hash-merge.t
 SHA1 09ff0761eabcb6d69be7be7e1f8d4a262660c5f1 t/50json.t
 SHA1 431327c1980c2abe6a77a1bbe8cfe6e800b86620 t/boilerplate.pm
@@ -64,11 +64,11 @@ SHA1 c0908aadd4d891db9a460dace4f012b6e8a36eff t/other.json
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (GNU/Linux)
 
-iQEcBAEBAgAGBQJUXo6eAAoJEK492j4Im1Bpa5MH/Rxz2bIeXNnUgM4IHZ7laGQd
-VJdFSl6W3GN82I1HJNrRtAXVeUMOK1li7bWUhUZf3fmMfvgL+hsZy9MkOEQhjqEj
-u4Rvg0zL4mcxvWuInO9Tq54fpBWMgaUyPaM9iS/rcyhWLXvgu7gNXb1wC40bUSb9
-VvcgmCj9RHOsb20T9AkrYmb8IIcvlJ/NQIa5Z4xZq6lAh7jRdJJsGa3BCYTIvJJT
-HO/NbuhM5RV/p3egUdakzIm0UNDUDX77uPcIfKmcdHjNwVZ/vQhqsdQ4AKMS2ute
-OflE1Ho+m/FF74gk3woM2syD9xkdPZbv74AvfA1rZ5PkxYNDnJLL8tH8TAmgVTU=
-=x/E8
+iQEcBAEBAgAGBQJUX2nMAAoJEK492j4Im1BpJEUH/2OlSfhvmtgHZACHW1HSuGlV
+cxb+VjXq05+nPLh3aipcGvd0GZQBvZHs5MTl7Z1AC9gqOstFzbO0avHAgB3b75Vu
+tb8iBOYFb7q4/ENiMPMp1v4wOCFNHCs87WLsIHbt5XWoNP1w6yCnbDeHs+4z9iPX
+mmN/URvrhFI7rICOnaerNSgOU8puQVFffCxWrvcPsd2juxjZpHoOLbA14pdXi1Zi
+v/GFBFSq6OnT25uUQHeQ9rE9A0NgHYyO3w7to33gXDST1s6ppT9t4CBBf+GvjQYi
+yhShovcgWQ4Vjgv9tY2gGMfpBjALou0GjCU21zR+XBoladQ57CQx5SWC/IE5yho=
+=5VgS
 -----END PGP SIGNATURE-----
